# recordr

./: .gitignore  .prettierrc  README.md  eslint.config.js  flake.nix  package-lock.json  package.json  tailwind.config.ts  vite.config.js
.github/workflows/: release.yml
.husky/: pre-commit
src/: App.svelte.old  app.html  types.ts
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  file_utils.rs  main.rs  models.rs
src-tauri/src/audio/: auto_record.rs  commands.rs  config.rs  errors.rs  mod.rs  recorder.rs  recording_session.rs  stream.rs  utils.rs
src/components/: ProjectManager.svelte  ProjectNameInput.svelte  RecentProjectsModal.svelte  SentenceList.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/stores/: projectStore.ts  recentProjectsStore.ts
src/utils/: autoRecord.ts  fileUtils.ts
