[package]
name = "recordr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "path-all", "dialog-save", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.13"
hound = "3.4.0" # For writing WAV files

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
