[package]
name = "recordr"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rustfmt-nightly = "1.4.21"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-title", "dialog-open", "path-all", "dialog-save", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.13" # Audio input/output
hound = "3.4.0" # For writing WAV files
csv = "1.3.0" # For writing CSV files
crossbeam-channel = "0.5.13" # For sending audio data between threads
log = "0.4"
env_logger = "0.10"
voice_activity_detector = "0.1.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build]
rustflags = ["-C", "link-args=-static"]
